# OTI

./: CMakeLists.txt  README.md
include/: liboti.h  oti.h
lib/: CMakeLists.txt  liboti.cc  oti.cpp
llvm-project/clang/include/clang/Basic/: Sanitizers.def
llvm-project/clang/include/clang/Driver/: SanitizerArgs.h
llvm-project/clang/lib/CodeGen/: CGClass.cpp  ItaniumCXXABI.cpp
llvm-project/clang/lib/Driver/ToolChains/: CommonArgs.cpp  Linux.cpp
llvm-project/compiler-rt/cmake/: config-ix.cmake
llvm-project/compiler-rt/cmake/Modules/: AllSupportedArchDefs.cmake
llvm-project/compiler-rt/lib/oti/: CMakeLists.txt  oti.cpp  oti.h
llvm-project/llvm/include/llvm/Transforms/Instrumentation/: OTI.h
llvm-project/llvm/lib/Passes/: PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm-project/llvm/lib/Transforms/Instrumentation/: CMakeLists.txt  OTI.cpp
manual_test/test_instrumentation/: Makefile  hello.c  hello.cc
manual_test/test_lib/: Makefile  test_lib.cc
manual_test/test_sanitizer/: Makefile
